--- a/.emacs.d/50-general.org
+++ b/.emacs.d/50-general.org
@@ -28,7 +28,6 @@ Declare variables and functions setup by [[file:init.el][init.el]].
 #+BEGIN_SRC emacs-lisp
   (defvar no-littering-etc-directory)
   (defvar no-littering-var-directory)
-  (declare-function koek-pkg/ensure "init")
   (declare-function no-littering-expand-var-file-name "no-littering")
 #+END_SRC
 
@@ -64,7 +63,7 @@ Move deleted files to trash.
 
 #+BEGIN_SRC emacs-lisp
   (use-package projectile
-    :ensure t
+    :straight t
     :demand t
     :bind
     (:map projectile-command-map
@@ -89,7 +88,7 @@ Move deleted files to trash.
 
 #+BEGIN_SRC emacs-lisp
   (use-package magit-status
-    :ensure magit
+    :straight magit
     :bind
     ("C-c f g" . magit-status))
 
@@ -176,11 +175,9 @@ Move deleted files to trash.
     :config
     (mapc (lambda (file-name)
             (add-to-list 'recentf-exclude
-                         (rx-to-string
-                          `(and line-start ,(expand-file-name file-name)))))
+                         (rx-to-string `(and line-start ,file-name))))
           (list "/user/share/emacs/"
-                (locate-user-emacs-file "lisp/")
-                (locate-user-emacs-file "elpa/")
+                (expand-file-name "straight/" user-emacs-directory)
                 no-littering-etc-directory
                 no-littering-var-directory))
     (recentf-mode))
@@ -208,7 +205,7 @@ Save auto-save files in =~/.emacs.d/var/auto-save/=.
 
 #+BEGIN_SRC emacs-lisp
   (use-package swiper
-    :ensure t
+    :straight t
     :bind
     ;; Why does [remap isearch-forward] prevent pdf-view-mode from
     ;; rebinding C-s?
@@ -222,7 +219,7 @@ Save auto-save files in =~/.emacs.d/var/auto-save/=.
 
 #+BEGIN_SRC emacs-lisp
   (use-package avy
-    :ensure t
+    :straight t
     :bind
     (("C-c j j" . avy-goto-char-timer)
      ([remap goto-line] . avy-goto-line))
@@ -238,7 +235,7 @@ Save auto-save files in =~/.emacs.d/var/auto-save/=.
 
 #+BEGIN_SRC emacs-lisp
   (use-package link-hint
-    :ensure t
+    :straight t
     :bind
     ("C-c j l" . link-hint-open-link))
 #+END_SRC
@@ -326,7 +323,7 @@ recognize [[*subword - Recognize words in camel case words][subwords]].
 
 #+BEGIN_SRC emacs-lisp
   (use-package smartparens
-    :ensure t
+    :straight t
     :bind
     (:map smartparens-mode-map
      ("C-M-f" . sp-forward-sexp)
@@ -452,7 +449,7 @@ Run:
 
 #+BEGIN_SRC emacs-lisp
   (use-package paren-face
-    :ensure t
+    :straight t
     :config
     (global-paren-face-mode))
 #+END_SRC
@@ -462,7 +459,7 @@ Run:
 
 #+BEGIN_SRC emacs-lisp
   (use-package expand-region
-    :ensure t
+    :straight t
     :bind
     ("C-S-SPC" . er/expand-region)
     :config
@@ -533,7 +530,7 @@ When line is indented, press =TAB= to complete text before point.
 
 #+BEGIN_SRC emacs-lisp
   (use-package company
-    :ensure t
+    :straight t
     :bind
     (:map company-mode-map
      ;; Why does [remap indent-for-tab-command] only work in prog-mode?
@@ -591,7 +588,7 @@ When line is indented, press =TAB= to complete text before point.
 
 #+BEGIN_SRC emacs-lisp
   (use-package company-flx
-    :ensure t
+    :straight t
     :after company
     :config
     (company-flx-mode))
@@ -602,7 +599,7 @@ When line is indented, press =TAB= to complete text before point.
 
 #+BEGIN_SRC emacs-lisp
   (use-package eglot
-    :ensure t
+    :straight t
     :bind
     (:map eglot-mode-map
      ("C-c e f" . eglot-code-actions)
@@ -691,7 +688,7 @@ For the major mode, see [[*YASnippet][YASnippet]].
 
 #+BEGIN_SRC emacs-lisp
   (use-package yasnippet
-    :ensure t
+    :straight t
     :hook ((text-mode prog-mode conf-mode) . yas-minor-mode)
     :preface
     (declare-function koek-org/get-src-block-var-value "50-general")
@@ -807,7 +804,7 @@ For the major mode, see [[*YASnippet][YASnippet]].
 ** undo-tree - Undo & redo replacement
 #+BEGIN_SRC emacs-lisp
   (use-package undo-tree
-    :ensure t
+    :straight t
     :demand t
     :bind
     (:map undo-tree-map
@@ -932,7 +929,7 @@ steps.
 
 #+BEGIN_SRC emacs-lisp
   (use-package ace-window
-    :ensure t
+    :straight t
     :bind
     ([remap other-window] . ace-window)
     :config
@@ -949,7 +946,7 @@ steps.
 
 #+BEGIN_SRC emacs-lisp
   (use-package transpose-frame
-    :ensure t
+    :straight t
     :bind
     ("C-c w t" . transpose-frame)
     :preface
@@ -1000,7 +997,7 @@ steps.
 
 #+BEGIN_SRC emacs-lisp
   (use-package eyebrowse
-    :ensure t
+    :straight t
     :bind
     (("C-c w 0" . eyebrowse-switch-to-window-config-0)
      ("C-c w 1" . eyebrowse-switch-to-window-config-1)
@@ -1061,7 +1058,7 @@ Bury unneeded buffers, computers have more than enough memory.
 
 #+BEGIN_SRC emacs-lisp
   (use-package gcmh
-    :ensure t
+    :straight t
     :hook (after-init . gcmh-mode)
     :config
     (setq gcmh-high-cons-threshold (* (expt 1024 2) 16)) ; In bytes
@@ -1073,7 +1070,7 @@ Bury unneeded buffers, computers have more than enough memory.
 
 #+BEGIN_SRC emacs-lisp
   (use-package exwm
-    :load-path ("lisp/xelb/" "lisp/exwm/")
+    :straight t
     :when (string= (getenv "XDG_CURRENT_DESKTOP") "Emacs"))
 #+END_SRC
 
@@ -1115,7 +1112,7 @@ Enable minibuffer commands (e.g. [[*counsel - Ivy powered commands][counsel]]) i
 
 #+BEGIN_SRC emacs-lisp
   (use-package ivy
-    :ensure t
+    :straight t
     :demand t
     :bind
     ("C-r" . ivy-resume)
@@ -1146,9 +1143,9 @@ Enable minibuffer commands (e.g. [[*counsel - Ivy powered commands][counsel]]) i
     :delight)
 
   ;; Optional dependencies
-  (koek-pkg/ensure 'ivy-avy)
-  (koek-pkg/ensure 'flx)
-  (koek-pkg/ensure 'wgrep)
+  (straight-use-package 'ivy-avy)
+  (straight-use-package 'flx)
+  (straight-use-package 'wgrep)
 #+END_SRC
 
 *** counsel - Ivy powered commands
@@ -1156,7 +1153,7 @@ Enable minibuffer commands (e.g. [[*counsel - Ivy powered commands][counsel]]) i
 
 #+BEGIN_SRC emacs-lisp
   (use-package counsel
-    :ensure t
+    :straight t
     :bind
     (([remap find-file] . counsel-find-file)
      ([remap insert-char] . counsel-unicode-char)
@@ -1190,7 +1187,7 @@ Enable minibuffer commands (e.g. [[*counsel - Ivy powered commands][counsel]]) i
     (setq counsel-org-goto-all-outline-path-prefix 'buffer-name)
     (setq counsel-outline-face-style 'org))
 
-  (koek-pkg/ensure 'request)              ; Optional dependency
+  (straight-use-package 'request)         ; Optional dependency
 #+END_SRC
 
 *** counsel-projectile - Ivy powered Projectile commands
@@ -1198,7 +1195,7 @@ Enable minibuffer commands (e.g. [[*counsel - Ivy powered commands][counsel]]) i
 
 #+BEGIN_SRC emacs-lisp
   (use-package counsel-projectile
-    :ensure t
+    :straight t
     :after projectile
     :config
     (setq counsel-projectile-key-bindings
@@ -1214,7 +1211,7 @@ Enable minibuffer commands (e.g. [[*counsel - Ivy powered commands][counsel]]) i
 
 #+BEGIN_SRC emacs-lisp
   (use-package helpful
-    :ensure t
+    :straight t
     :bind
     (([remap describe-variable] . helpful-variable)
      ([remap describe-function] . helpful-callable)
@@ -1262,7 +1259,7 @@ On [[https://devdocs.io/][DevDocs]], enable:
 
 #+BEGIN_SRC emacs-lisp
   (use-package devdocs-lookup
-    :load-path "lisp/devdocs-lookup/"
+    :straight (devdocs-lookup :host github :repo "skeeto/devdocs-lookup")
     :bind
     ("C-c d d" . devdocs-lookup)
     :config
@@ -1311,7 +1308,7 @@ On [[https://devdocs.io/][DevDocs]], enable:
 
 #+BEGIN_SRC emacs-lisp
   (use-package which-key
-    :ensure t
+    :straight t
     :config
     (which-key-add-key-based-replacements
       "C-c &" "yasnippet"
@@ -1337,7 +1334,7 @@ On [[https://devdocs.io/][DevDocs]], enable:
 
 #+BEGIN_SRC emacs-lisp
   (use-package vterm
-    :ensure t
+    :straight t
     :commands vterm-mode
     :preface
     (defconst koek-term/buffer-base-name "*vterm*"
@@ -1556,7 +1553,7 @@ For news feeds, see [[file:90-personal.org::*News feeds][News feeds]].
 
 #+BEGIN_SRC emacs-lisp
   (use-package elfeed
-    :ensure t
+    :straight t
     :bind
     ("C-c x n" . elfeed))
 
@@ -1571,7 +1568,7 @@ For news feeds, see [[file:90-personal.org::*News feeds][News feeds]].
 
 #+BEGIN_SRC emacs-lisp
   (use-package pdf-view
-    :ensure pdf-tools
+    :straight pdf-tools
     :mode ((rx ".pdf" string-end) . pdf-view-mode)
     :preface
     (defface koek-pdf/midnight
@@ -1856,7 +1853,7 @@ For news feeds, see [[file:90-personal.org::*News feeds][News feeds]].
 
 #+BEGIN_SRC emacs-lisp
   (use-package clojure-mode
-    :ensure t
+    :straight t
     :mode
     (((rx ".clj" string-end) . clojure-mode)
      ((rx ".cljs" string-end) . clojurescript-mode)
@@ -1878,7 +1875,7 @@ For news feeds, see [[file:90-personal.org::*News feeds][News feeds]].
 
 #+BEGIN_SRC emacs-lisp
   (use-package cider
-    :ensure t
+    :straight t
     :after clojure-mode)
 
   (use-package cider-mode
@@ -1912,7 +1909,7 @@ For news feeds, see [[file:90-personal.org::*News feeds][News feeds]].
 
 #+BEGIN_SRC emacs-lisp
   (use-package sly
-    :ensure t
+    :straight t
     :after lisp-mode
     :preface
     (defun koek-sly/fix-install ()
@@ -1998,7 +1995,7 @@ Configure Conf mode afterwards.
 
 #+BEGIN_SRC emacs-lisp
   (use-package erlang
-    :ensure t
+    :straight t
     :mode ((rx ".erl" string-end) . erlang-mode)
     :config
     (use-package devdocs-lookup
@@ -2046,7 +2043,7 @@ Configure Conf mode afterwards.
 
 #+BEGIN_SRC emacs-lisp
   (use-package emmet-mode
-    :ensure t
+    :straight t
     :bind
     (:map emmet-mode-keymap
      ("C-<tab>" . emmet-expand-line))     ; Why does <tab> work but TAB not?
@@ -2061,7 +2058,7 @@ Configure Conf mode afterwards.
 
 #+BEGIN_SRC emacs-lisp
   (use-package js2-mode
-    :ensure t
+    :straight t
     :mode (rx ".js" string-end)
     :interpreter "node"
     :config
@@ -2090,7 +2087,7 @@ Configure Conf mode afterwards.
 
 #+BEGIN_SRC emacs-lisp
   (use-package indium-interaction
-    :ensure indium
+    :straight indium
     :hook (js2-mode . indium-interaction-mode)
     :config
     ;; Resolve keybinding conflict with documentation keymap
@@ -2103,7 +2100,7 @@ Configure Conf mode afterwards.
 
 #+BEGIN_SRC emacs-lisp
   (use-package json-mode
-    :ensure t
+    :straight t
     :mode (rx ".json" string-end)
     :config
     (use-package devdocs-lookup
@@ -2117,7 +2114,7 @@ Configure Conf mode afterwards.
 
 #+BEGIN_SRC emacs-lisp
   (use-package markdown-mode
-    :ensure t
+    :straight t
     :mode (rx ".md" string-end)
     :config
     (setq markdown-command "pandoc -s -f markdown -t html5")
@@ -2131,7 +2128,7 @@ Configure Conf mode afterwards.
 
 #+BEGIN_SRC emacs-lisp
   (use-package meson-mode
-    :ensure t
+    :straight t
     :mode (rx "meson.build" string-end))
 #+END_SRC
 
@@ -2160,7 +2157,7 @@ Configure Conf mode afterwards.
 
 #+BEGIN_SRC emacs-lisp
   (use-package scad-mode
-    :ensure t
+    :straight t
     :mode (rx ".scad" string-end)
     :config
     ;; Resolve smartparens' delayed post handlers not being called
@@ -2388,7 +2385,7 @@ For agendas, see [[file:90-personal.org::*Agendas][Agendas]].
                     (string-join (append options '("hidelinks")) ",\n ")
                     "\n}\n"))))
 
-  (koek-pkg/ensure 'htmlize)              ; Optional dependency
+  (straight-use-package 'htmlize)         ; Optional dependency
 #+END_SRC
 
 *** org-caldav - Sync calendars
@@ -2396,7 +2393,7 @@ For agendas, see [[file:90-personal.org::*Agendas][Agendas]].
 
 #+BEGIN_SRC emacs-lisp
   (use-package org-caldav
-    :ensure t
+    :straight t
     :bind
     ("C-c o s" . org-caldav-sync))
 #+END_SRC
@@ -2433,7 +2430,7 @@ For agendas, see [[file:90-personal.org::*Agendas][Agendas]].
 
 #+BEGIN_SRC emacs-lisp
   (use-package pipenv
-    :ensure t
+    :straight t
     :hook (python-mode . pipenv-mode)
     :delight)
 #+END_SRC
@@ -2456,7 +2453,7 @@ For agendas, see [[file:90-personal.org::*Agendas][Agendas]].
 
 #+BEGIN_SRC emacs-lisp
   (use-package geiser
-    :ensure t
+    :straight t
     :after scheme)
 
   (use-package geiser-autodoc
@@ -2516,7 +2513,7 @@ For agendas, see [[file:90-personal.org::*Agendas][Agendas]].
 *** sql-indent - Indent code
 #+BEGIN_SRC emacs-lisp
   (use-package sql-indent
-    :ensure t
+    :straight t
     :hook (sql-mode . sqlind-minor-mode)
     :delight sqlind-minor-mode)
 #+END_SRC
@@ -2529,7 +2526,7 @@ which requires AUCTeX.
 
 #+BEGIN_SRC emacs-lisp
   (use-package tex
-    :ensure auctex
+    :straight auctex
     :mode ((rx ".tex" string-end) . TeX-tex-mode))
 #+END_SRC
 
@@ -2538,7 +2535,7 @@ which requires AUCTeX.
 
 #+BEGIN_SRC emacs-lisp
   (use-package cdlatex
-    :ensure t
+    :straight t
     :hook (LaTeX-mode . cdlatex-mode)
     :delight)
 #+END_SRC
@@ -2555,7 +2552,7 @@ which requires AUCTeX.
 
 #+BEGIN_SRC emacs-lisp
   (use-package wolfram-mode
-    :ensure t
+    :straight t
     :mode (rx ".wl" string-end)
     :delight (wolfram-mode "WL" :major))
 #+END_SRC
@@ -2610,7 +2607,7 @@ Load [[https://github.com/purcell/color-theme-sanityinc-tomorrow][Tomorrow]] the
 
 #+BEGIN_SRC emacs-lisp
   (use-package color-theme-sanityinc-tomorrow
-    :ensure t
+    :straight t
     :preface
     (defvar koek-thm/enable-hook nil
       "Normal hook run after enabling theme.")
@@ -2822,7 +2819,7 @@ Set mode line. Style it with [[https://github.com/tarsius/moody][moody]].
 
 #+BEGIN_SRC emacs-lisp
   (use-package moody
-    :ensure t
+    :straight t
     :preface
     (declare-function eyebrowse--get "eyebrowse")
     (declare-function flymake--backend-state-diags "flymake")
