[emacs] Resize images to 1/5 of display width in org-mode.

--- a/.emacs.d/50-general.org
+++ b/.emacs.d/50-general.org
@@ -2244,6 +2244,11 @@ For agendas, see [[file:90-personal.org::*Agendas][Agendas]].
 
     ;; Appearance - Images
     (setq org-startup-with-inline-images t)
+    (let ((width (thread-last (display-monitor-attributes-list)
+                   car                    ; Primary display
+                   (alist-get 'geometry)  ; Arrangement/resolution
+                   (nth 2))))             ; Width
+      (setq org-image-actual-width (floor (* width (/ 1 5.0)))))
     (add-hook 'org-babel-after-execute-hook #'org-redisplay-inline-images)
 
     ;; Appearance - LaTeX previews
