--- a/README.org
+++ b/README.org
@@ -59,6 +59,7 @@ Finally, copy the dotfiles to your home directory.
   - Scheme: [[https://www.gnu.org/software/guile/][Guile]]
   - SQL: [[https://www.postgresql.org/][PostgreSQL]]
   - TeX, Org & Markdown:
+    - [[https://www.sqlite.org/][SQLite]]
     - [[https://www.latex-project.org/][LaTeX]]
     - [[https://pandoc.org/][pandoc]]
   - Wolfram Language: [[https://www.wolfram.com/mathematica/][Mathematica]]
@@ -150,7 +151,7 @@ To install dependencies on Arch Linux, run:
   createdb
 
   ## TeX, Org & Markdown
-  pacman -S texlive-core texlive-latexextra pandoc
+  pacman -S sqlite texlive-core texlive-latexextra pandoc
 
   ## Wolfram Language
   # Install mathematica from AUR
