--- a/dotfiles.org
+++ b/dotfiles.org
@@ -51,6 +51,7 @@ Finally, set other directories.
   KOEK_CALENDARS_DIR="$XDG_DOCUMENTS_DIR/Kalenders"
   KOEK_EMAIL_DIR="$XDG_DOCUMENTS_DIR/E-mail"
   KOEK_NEWS_DIR="$XDG_DOCUMENTS_DIR/Nieuws"
+  KOEK_NOTES_DIR="$XDG_DOCUMENTS_DIR/Notities"
   KOEK_PROJECTS_DIR="$HOME/Projecten"
 #+END_SRC
 
